# OOP

lab01/: CMakeLists.txt  main.cpp  solution.cpp  solution.h  test.cpp
lab02/: CMakeLists.txt  README.md  main.cpp  test.cpp  twelve.cpp  twelve.h
lab03/: CMakeLists.txt  README.md  figure.cpp  figure.hpp  main.cpp  octagon.cpp  octagon.hpp  square.cpp  square.hpp  tests.cpp  triangle.cpp  triangle.hpp
lab04/: CMakeLists.txt  README.md  array.hpp  figure.hpp  main.cpp  octagon.hpp  square.hpp  tests.cpp  triangle.hpp
lab05/: README.md  list.hpp  main.cpp  perfect_allocator.hpp  reserve_allocator.hpp  tests.cpp
lab06/: CMakeLists.txt  NPC.cpp  NPC.hpp  README.md  elf.cpp  elf.hpp  factory.cpp  factory.hpp  main.cpp  squirrel.cpp  squirrel.hpp  thug.cpp  thug.hpp
lab07/: README.md
